Use default of 2 for epic priority

--- a/.github/ISSUE_TEMPLATE/01-EPIC.yml
+++ b/.github/ISSUE_TEMPLATE/01-EPIC.yml
@@ -66,10 +66,11 @@ body:
     attributes:
       label: "Epic Priority"
       options:
-        - "Normal"
         - "Urgent"
         - "High"
+        - "Normal"
         - "Low"
+      default: 2
     validations:
       required: true
 
