fix: move to correct reusable workflow format

--- a/.github/workflows_deprecated/_autocomment-advice.yml
+++ b/.github/workflows_deprecated/_autocomment-advice.yml
@@ -2,7 +2,7 @@ name: Post issue guidance comment
 
 on:
   issues:
-    workflow_call:
+    types: [opened, edited]
 
 permissions:
   issues: write
