--- a/.github/workflows_deprecated/_autolink-feature-to-epic.yml
+++ b/.github/workflows_deprecated/_autolink-feature-to-epic.yml
@@ -2,7 +2,7 @@ name: Auto-link Feature to Epic (sub-issue)
 
 on:
   issues:
-    workflow_call:
+    types: [opened, edited]
 
 permissions:
   issues: write
