--- a/.github/workflows/_autocomment-advice.yml
+++ b/.github/workflows/_autocomment-advice.yml
@@ -8,7 +8,9 @@ permissions:
 
 jobs:
   guide:
-    runs-on: ubuntu-latest
+    runs-on:
+      group: Jetson
+      labels: self-hosted, ARM64
     steps:
       - name: Post guide comment
         uses: actions/github-script@v7
