--- a/.github/workflows/_autolink-feature-to-epic.yml
+++ b/.github/workflows/_autolink-feature-to-epic.yml
@@ -8,7 +8,9 @@ permissions:
 
 jobs:
   link:
-    runs-on: ubuntu-latest
+    runs-on:
+      group: Jetson
+      labels: self-hosted, ARM64
     steps:
       - name: Link Feature as sub-issue of Epic
         uses: actions/github-script@v7
