--- a/.github/workflows/_autocomment-advice.yml
+++ b/.github/workflows/_autocomment-advice.yml
@@ -10,7 +10,7 @@ jobs:
   guide:
     runs-on:
       group: Jetson
-      labels: self-hosted, ARM64
+      labels: [self-hosted, ARM64, Jetson]
     steps:
       - name: Post guide comment
         uses: actions/github-script@v7
