--- a/.github/workflows/_autolink-feature-to-epic.yml
+++ b/.github/workflows/_autolink-feature-to-epic.yml
@@ -10,7 +10,7 @@ jobs:
   link:
     runs-on:
       group: Jetson
-      labels: self-hosted, ARM64
+      labels: [self-hosted, ARM64, Jetson]
     steps:
       - name: Link Feature as sub-issue of Epic
         uses: actions/github-script@v7
