fix: should act on issues

--- a/.github/workflows/_autolink-feature-to-epic.yml
+++ b/.github/workflows/_autolink-feature-to-epic.yml
@@ -1,7 +1,8 @@
 name: Auto-link Feature to Epic (sub-issue)
 
 on:
-  push:
+  issues:
+    types: [opened, edited]
   workflow_call:
 
 permissions:
